--- a/arquivos/stylesheets/base/_variaveis.css
+++ b/arquivos/stylesheets/base/_variaveis.css
@@ -7,6 +7,7 @@
     --fonteTamannhoTituloResponsivo1: 15px;
     --fonteTamanhoDestaqueCabecalho: 48px;
     --fonteTamanhoDestaqueCabecalhoResponsivo1: 36px;
+    --fonteTamanhoReduzido: 14px;
 
 
     /*cores do projeto*/
